fix for hidden logo layout shifting

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -28,6 +28,7 @@
   font-weight: 700;
   background: var(--text-gradient);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   text-align: center;
   cursor: pointer;
